# pyDetecDiv

./: .gitignore  README.md  pyproject.toml
docs/: genindex.html  getting_started.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/api/: domain.html  gui.html  index.html  persistence.html  plugins.html  utilities.html
docs/api/domain/: dso_classes.html  dso_common.html  image_data.html  index.html
docs/api/gui/: core.html  gui.html  index.html
docs/api/persistence/: index.html  project.html  repositories.html  sqlalchemy.html
docs/api/plugins/: index.html  plugins.html
docs/api/plugins/roi_classification/: index.html
docs/api/utilities/: exceptions.html  global.html  index.html  settings.html  utilities.html
docs/source/: conf.py  getting_started.rst  index.rst
docs/source/api/: domain.rst  gui.rst  index.rst  persistence.rst  plugins.rst  utilities.rst
docs/source/api/domain/: dso_classes.rst  dso_common.rst  image_data.rst  index.rst
docs/source/api/gui/: core.rst  gui.rst  index.rst
docs/source/api/persistence/: index.rst  project.rst  repositories.rst  sqlalchemy.rst
docs/source/api/plugins/: index.rst  plugins.rst
docs/source/api/utilities/: exceptions.rst  global.rst  index.rst  settings.rst  utilities.rst
src/: settings.py
src/pydetecdiv/: __init__.py  exceptions.py  settings.py
src/pydetecdiv/app/: __init__.py  gui.py  pydetecdiv_app.py  runtime_hooks.py
src/pydetecdiv/app/gui/: Actions.py  ActionsData.py  ActionsProject.py  ActionsSettings.py  FOVmanager.py  ImageViewer.py  MenuBar.py  RawData2FOV.py  Selectors.py  SourcePath.py  Toolbox.py  Tools.py  Trees.py  ViewContainer.py  Viewers.py  Windows.py  __init__.py  callbacks.py  parameters.py  resources.py  resources.qrc  resources_rc.py
src/pydetecdiv/app/models/: Trees.py  __init__.py
src/pydetecdiv/app/parameters/: __init__.py
src/pydetecdiv/business_logic/: FOV.py  ROI.py
src/pydetecdiv/database/: CreateTables.sql  project.py
src/pydetecdiv/domain/: ArrayImageResource.py  BoundingBox.py  CommandLineTool.py  Data.py  Dataset.py  Entity.py  Experiment.py  FOV.py  FileResource.py  Hdf5ImageResource.py  Image.py  ImageData.py  ImageResource.py  ImageResourceData.py  Mask.py  MultiFileImageResource.py  Point.py  Project.py  ROI.py  Run.py  SingleFileImageResource.py  Tool.py  __init__.py  dso.py  parameters.py
src/pydetecdiv/domain/tools/: __init__.py
src/pydetecdiv/legacy/matlab/: classes.py
src/pydetecdiv/persistence/: CreateTables.sql  __init__.py  project.py  repository.py
src/pydetecdiv/persistence/bioimageit/: request.py
src/pydetecdiv/persistence/sqlalchemy/: repositories.py
src/pydetecdiv/plugins/: __init__.py
src/pydetecdiv/plugins/example/: ActionDialog.py  ActionDockWindow.py  Actions.py  __init__.py
src/pydetecdiv/plugins/gui/: __init__.py
src/pydetecdiv/plugins/parameters/: __init__.py
src/pydetecdiv/plugins/result_db_example/: __init__.py
src/pydetecdiv/plugins/roi_class_torch/: __init__.py  data.py  evaluate.py  training.py  utils.py
src/pydetecdiv/torch/: __init__.py
src/pydetecdiv/utils/: ImageResource.py  Shapes.py  __init__.py  path.py
tests/: conftest.py  dummy_test.py
tests/legacy/matlab/: classes_test.py
(+104 files in other folders)
