[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pydetecdiv"
version = "0.0.0"
description = "Python tools for DetecDiv (https://github.com/gcharvin/DetecDiv/)"
license = {text = "CeCILL FREE SOFTWARE LICENSE AGREEMENT Version 2.1 dated 2013-06-21"}
authors = [{name = "Frédéric PLEWNIAK", email = "f.plewniak@unistra.fr"}]
readme = "README.md"
keywords = ["cell division", "light microscopy", "deep learning", "neural network", "computer vision"]
classifiers=[
        "Programming Language :: Python :: 3",
        "Operating System :: OS Independent",
        "Intended Audience :: End Users/Desktop",
        "Intended Audience :: Science/Research",
        "Intended Audience :: Developers",
        "License :: OSI Approved :: CEA CNRS Inria Logiciel Libre License, version 2.1 (CeCILL-2.1)",
        "Topic :: Scientific/Engineering :: Bio-Informatics",
]

requires-python = ">=3.10.0"
dependencies = [
    "h5py",
    "matplotlib",
    "numpy",
    #"omero-py",
    "pandas",
    "psutils",
    #"pylibjpeg",
    #"pylibjpeg-libjpeg",
    "pyxdg",
    "scikit-image",
    #"scipy",
    "sqlalchemy",
    "tifffile",
    "xmltodict",
]

[project-urls]
"Repository" = "https://github.com/fplewniak/pyDetecDiv"
"Documentation" = "https://fplewniak.github.io/pyDetecDiv/"

[tool.pytest.ini_options]
minversion = "6.0"
python_functions = "*_test"
